# GalaxyERP

./: CMakeLists.txt  README.md
cmake/: documentation.cmake  gtest.cmake
doc/design/: conf.py
libs/: CMakeLists.txt
libs/galaxycore/: CMakeLists.txt
libs/galaxycore/include/time/: leap_year.hpp
libs/galaxycore/unittests/: CMakeLists.txt  leap_year_test.cpp
templates/: Doxyfile.in
